# hls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  report.md  test.sh
include/: algo.h  graph.h  io.h  io.hpp
src/: CMakeLists.txt  allocate.cpp  display.cpp  io.cpp  main.cpp  schedule.cpp
src/allocate/: CMakeLists.txt  allocate.cpp  area.cpp  area.h  ilp.cpp  ilp.h  perf.cpp  perf.h
src/allocate/include/: area.h  perf.h
src/bind/: CMakeLists.txt  base.cpp  base.h  bind.cpp  bind.h
src/bind/include/: bind.h
src/data/: CMakeLists.txt  graph.cpp  io.cpp  mapping.cpp
src/schedule/: CMakeLists.txt  base.cpp  base.h  list.cpp  schedule.cpp  sdc.cpp  sdc.h  topo.cpp
src/schedule/include/: base.h  joint.h  list.h  topo.h
test/: CMakeLists.txt  input.cpp
